Add Rest API to retrieve hypervisor list
1. Add Rest API to retrieve hypervisor list;
2. Fix the API behavior for stop_test;
